F&GDEV/src/objects/Marketing_Materials__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>ARROminus1__c</fullName>
        <formula>Ad_Review_Reviews_Outstanding__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARROminus1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AR_AnnActTotalDays__c</fullName>
        <label>AR_AnnActTotalDays</label>
        <summarizedField>Ad_Review_Detail__c.ReviewerDaysToComplete__c</summarizedField>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Annuity</value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AR_AnnAct__c</fullName>
        <label>AR_AnnAct</label>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Reviewer_Department__c</field>
            <operation>equals</operation>
            <value>Actuarial - Annuity</value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AdReview_CC_Email__c</fullName>
        <label>AdReview_CC_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Changes_Requested__c</fullName>
        <label>Ad Review Changes Requested</label>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Result_of_Review__c</field>
            <operation>equals</operation>
            <value>Rejected, Approved with Changes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Admin_Review_of_Revisions__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Combined_Name__c</fullName>
        <formula>Ad_Review_Number__c &amp; &quot; - &quot; &amp;  Form_Description__c &amp; &quot; - &quot; &amp;  MktCombinedFormNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Review Combined Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad Review Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Ad Review</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Materials (Ad Review Contact)</relationshipLabel>
        <relationshipName>Marketing_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Document_Status__c</fullName>
        <formula>IF( Ad_Review_Outstanding__c &gt;0,  IF( Ad_Review_In_Progress__c &gt;0, &quot;Doc Is In Use&quot;, &quot;Doc is Available&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Review Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Review_File_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Review - File Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Review_In_Progress__c</fullName>
        <label>Ad Review In Progress</label>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Review_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Number__c</fullName>
        <externalId>true</externalId>
        <label>Ad Review Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ad_Review_Outstanding__c</fullName>
        <label>Ad Review Approvals Outstanding</label>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Review_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Priority__c</fullName>
        <label>Ad Review Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Urgent</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Normal</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Review_Required_1__c</fullName>
        <label>Ad Review Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Product Compliance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Actuarial Annuity</fullName>
                </value>
                <value>
                    <fullName>Actuarial Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Review_Required__c</fullName>
        <label>Ad Review Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Compliance, Legal, Actuarial</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Product Compliance, Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Review_Reviews_Outstanding__c</fullName>
        <label>Ad Review Reviews Outstanding</label>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Review_Completed__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Status__c</fullName>
        <formula>TEXT(Status__c)</formula>
        <label>Ad Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Review_Submitter_Email__c</fullName>
        <label>Ad Review Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ad_Reviewer_1_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR1 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Reviewer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad Reviewer 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.AccountNameForm__c</field>
                <operation>equals</operation>
                <value>Ad Reviewers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Materials (Ad Reviewer 1)</relationshipLabel>
        <relationshipName>Marketing_Materials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <label>Ad Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Sales Literature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assign_to_Ad_Review_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Ad Review Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This material is Void/Cancelled and was never used.</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Approval Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commit_Date__c</fullName>
        <label>Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consumer_Ad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Ad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Ad_Reviewer__c</fullName>
        <label>Current Ad Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Product Compliance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Actuarial - Annuity</fullName>
                </value>
                <value>
                    <fullName>Actuarial - Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Expiration__c</fullName>
        <label>Current Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Review_Due__c</fullName>
        <label>Current Review Due</label>
        <summarizedField>Ad_Review_Detail__c.Review_Due__c</summarizedField>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Review_Completed__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_1st_Revisions_Sent__c</fullName>
        <label>Date 1st Revisions Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_Actuarial__c</fullName>
        <label>Date Due Actuarial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_Ad_Administrator__c</fullName>
        <label>Date Due Ad Administrator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_Legal__c</fullName>
        <label>Date Due Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_Marcom__c</fullName>
        <label>Date Due Marcom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due_Product_Compliance__c</fullName>
        <label>Date Due Product Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Latest_Changes_Received__c</fullName>
        <label>Date Latest Changes Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Revisions_Sent__c</fullName>
        <label>Date Revisions Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysToApprove__c</fullName>
        <formula>Original_Approval__c - Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysToApprove</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Legacy__c</fullName>
        <label>Department - Legacy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Change__c</fullName>
        <label>Description of Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disapproval_Date__c</fullName>
        <label>Disapproval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disapproval_Notice_Sent__c</fullName>
        <label>Disapproval Notice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Area__c</fullName>
        <label>Distribution Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Internet Site</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Public Web Site</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Trade Press</fullName>
                </value>
                <value>
                    <fullName>Trade Show Booth Banner</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Web (Financial Advisor Publication)</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Distribution_Number__c</fullName>
        <label>Estimated Distribution Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedited_Review_Requested__c</fullName>
        <label>Expedited Review Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>For_Agent_Use_Only__c</fullName>
        <label>For Agent Use Only</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Description__c</fullName>
        <label>Form Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Ad</fullName>
                </value>
                <value>
                    <fullName>Agent Highlights</fullName>
                </value>
                <value>
                    <fullName>Agent Product Guide</fullName>
                </value>
                <value>
                    <fullName>Agent Training Manual</fullName>
                </value>
                <value>
                    <fullName>Annuity Calculator</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Cert of App</fullName>
                </value>
                <value>
                    <fullName>Consumer (Family)</fullName>
                </value>
                <value>
                    <fullName>Consumer - No App</fullName>
                </value>
                <value>
                    <fullName>Consumer Overview</fullName>
                </value>
                <value>
                    <fullName>Consumer with App &amp; Cert of App</fullName>
                </value>
                <value>
                    <fullName>Features &amp; Application</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Illustration</fullName>
                </value>
                <value>
                    <fullName>Life Application</fullName>
                </value>
                <value>
                    <fullName>Mailer</fullName>
                </value>
                <value>
                    <fullName>MYGA Fillable – pre approved</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Powerpoint</fullName>
                </value>
                <value>
                    <fullName>Product at a Glance</fullName>
                </value>
                <value>
                    <fullName>Rate Guide</fullName>
                </value>
                <value>
                    <fullName>Statement of Understanding</fullName>
                </value>
                <value>
                    <fullName>Video/Audio</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Webinar Evite</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Fillable Template - Pre-Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Use__c</fullName>
        <label>Intended Use</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReminderSent__c</fullName>
        <label>LastReminderSent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_PD_Database_Ad_Review_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PD Database Ad Review ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_PD_Mkt_Mat_ID__c</fullName>
        <label>Legacy PD Mkt Mat ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Ad_Review_Priority__c</fullName>
        <label>Marketing Ad Review Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Production_Date__c</fullName>
        <label>Marketing Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Missing_Ad_Review_Number_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Ad Review Number Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Data2__c</fullName>
        <label>Missing Data</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktCombinedFormNumber__c</fullName>
        <formula>IF(TEXT(Mkt_Form_Prefix__c)=&quot;&quot;,&quot;&quot;,TEXT(Mkt_Form_Prefix__c) &amp;&quot; &quot;&amp; MktFormNumber__c &amp; IF( ISNULL( MktFormNumberSuffix__c ) , &quot;&quot;,  MktFormNumberSuffix__c ) &amp;&quot; (&quot;&amp; TEXT(Orig_Date_Month__c) &amp;&quot;-&quot;&amp; Orig_Date_Year__c &amp; &quot;)&quot;)</formula>
        <label>MktCombinedFormNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktFormNumberSuffix__c</fullName>
        <label>MktFormNumberSuffix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktFormNumber__c</fullName>
        <label>MktFormNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktFormPrefixSearch__c</fullName>
        <label>MktFormPrefixSearch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktMatAdditional_Notes__c</fullName>
        <label>MktMatAdditional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MktMatFormType__c</fullName>
        <label>MktMatFormType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Ad</fullName>
                </value>
                <value>
                    <fullName>Agent Highlights</fullName>
                </value>
                <value>
                    <fullName>Agent Product Guide</fullName>
                </value>
                <value>
                    <fullName>Agent Training Manual</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Cert of App</fullName>
                </value>
                <value>
                    <fullName>Consumer - no app</fullName>
                </value>
                <value>
                    <fullName>Consumer Overview</fullName>
                </value>
                <value>
                    <fullName>Consumer with App &amp; Cert of App</fullName>
                </value>
                <value>
                    <fullName>Features &amp; Application</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Life Application</fullName>
                </value>
                <value>
                    <fullName>Mailer</fullName>
                </value>
                <value>
                    <fullName>Product at a Glance</fullName>
                </value>
                <value>
                    <fullName>Rate Guide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mkt_Form_Prefix__c</fullName>
        <label>Mkt Form Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADLF</fullName>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                </value>
                <value>
                    <fullName>ADTJ</fullName>
                </value>
                <value>
                    <fullName>ADV</fullName>
                </value>
                <value>
                    <fullName>FG</fullName>
                </value>
                <value>
                    <fullName>LMG</fullName>
                </value>
                <value>
                    <fullName>NYCO</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>OMCO</fullName>
                </value>
                <value>
                    <fullName>PORT</fullName>
                </value>
                <value>
                    <fullName>AAPP</fullName>
                </value>
                <value>
                    <fullName>LAPP</fullName>
                </value>
                <value>
                    <fullName>NYAD</fullName>
                </value>
                <value>
                    <fullName>FGNY</fullName>
                </value>
                <value>
                    <fullName>ICC11</fullName>
                </value>
                <value>
                    <fullName>ICC14</fullName>
                </value>
                <value>
                    <fullName>ICC15</fullName>
                </value>
                <value>
                    <fullName>ICC18</fullName>
                </value>
                <value>
                    <fullName>OMAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obsolete_Date__c</fullName>
        <label>Obsolete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Date_Month__c</fullName>
        <label>Orig Date - Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orig_Date_Year__c</fullName>
        <defaultValue>Text(Year(Today()))</defaultValue>
        <label>Orig Date - Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Approval_Date__c</fullName>
        <description>used to capture original approval date when an ad has been resubmitted after approval</description>
        <label>Original Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Approval__c</fullName>
        <label>Original Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentMaterial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Material</label>
        <referenceTo>Marketing_Materials__c</referenceTo>
        <relationshipLabel>Child Marketing Materials</relationshipLabel>
        <relationshipName>Child_Marketing_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proactive_Renewal_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proactive Renewal Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Association_Confirm__c</fullName>
        <label>Product Association Confirm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Association Confirmed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annuity</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Life And Annuity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quick_Association__c</fullName>
        <label>Product Quick Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accelerator Plus</fullName>
                </value>
                <value>
                    <fullName>AdvanceMark</fullName>
                </value>
                <value>
                    <fullName>FG Accumulator Plus</fullName>
                </value>
                <value>
                    <fullName>FG Guarantee-Platinum</fullName>
                </value>
                <value>
                    <fullName>FG Index Choice 10</fullName>
                </value>
                <value>
                    <fullName>FG Life-Choice</fullName>
                </value>
                <value>
                    <fullName>FG Life-Elite</fullName>
                </value>
                <value>
                    <fullName>LegendMark</fullName>
                </value>
                <value>
                    <fullName>Performance Pro</fullName>
                </value>
                <value>
                    <fullName>Prosperity Elite</fullName>
                </value>
                <value>
                    <fullName>Retirement Pro</fullName>
                </value>
                <value>
                    <fullName>Safe Income Plus</fullName>
                </value>
                <value>
                    <fullName>SpectraMark</fullName>
                </value>
                <value>
                    <fullName>Synergy Global Advantage Gold</fullName>
                </value>
                <value>
                    <fullName>Synergy Global Advantage Freedom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type_Quick_Association__c</fullName>
        <label>Product Type Quick Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FIA</fullName>
                </value>
                <value>
                    <fullName>FIUL</fullName>
                </value>
                <value>
                    <fullName>SPIA</fullName>
                </value>
                <value>
                    <fullName>MYGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Marketing Materials</relationshipLabel>
        <relationshipName>Marketing_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Variation__c</fullName>
        <label>Reason For Variation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewed_Approval_Not_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this check box to exclude this record from the Ad Review Expiration Report</description>
        <inlineHelpText>Use this check box to exclude this record from the Ad Review Expiration Report</inlineHelpText>
        <label>Renewed Approval Not Needed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>